# cat_dog_classifier

./: .gitignore  README.md  pyproject.toml
cat_dog_classifier/: download.py
cat_dog_classifier/jupyter_notebooks/: data_exploration.ipynb  data_preparation.ipynb  model_training.ipynb
cat_dog_classifier/jupyter_notebooks/runs/Nov03_18-54-05_Alexs-MacBook-Pro-2.local/: events.out.tfevents.1699037645.Alexs-MacBook-Pro-2.local.31099.1
