[tool.poetry]
name = "cat-dog-classifier"
version = "0.1.0"
description = "Repo to build a webUI to classify cat and dogs images"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cat_dog_classifier"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
