[tool.poetry]
name = "cat-dog-classifier"
version = "0.1.0"
description = ""
authors = ["Alejandro-86 <aalonsocanales@gmail.com>"]
readme = "README.md"
packages = [{include = "cat_dog_classifier"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
